--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.vscode
 
 # testing
 /coverage
@@ -17,6 +18,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
