--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true, 
+    "typeRoots": ["./types", "./node_modules/@types"],
+    "declaration": true, 
+    "declarationDir": "./types" 
   },
+  "typeRoots": ["./types", "./node_modules/@types"],
   "include": [
     "src"
   ]
