--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gif-player": "^0.4.2",
+    "react-player": "^2.7.2",
     "react-redux": "^7.2.2",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
